# ai-expense-tracker-service

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: PRD.md
specs/001-crud-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-crud-api/checklists/: requirements.md
specs/001-crud-api/contracts/: openapi.yaml
specs/002-database-schema-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-database-schema-api/checklists/: requirements.md
specs/002-database-schema-api/contracts/: openapi.yaml
specs/003-list-tables/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-list-tables/checklists/: requirements.md
src/: config.py  database.py  main.py
src/models/: __init__.py  account.py  account_type.py  category.py  currency.py  payee.py  transaction.py
src/routers/: accounts.py  analytics.py  categories.py  payees.py  reference.py  schema.py  transactions.py
src/schemas/: account.py  account_type.py  analytics.py  category.py  common.py  currency.py  enums.py  payee.py  schema.py  transaction.py
src/services/: account_service.py  analytics_service.py  category_service.py  payee_service.py  reference_service.py  schema_service.py  transaction_service.py
tests/: conftest.py
tests/integration/: test_accounts_api.py  test_categories_api.py  test_payees_api.py  test_reference_api.py  test_transactions_api.py
tests/unit/: test_transaction_service.py
(+1 files in other folders)
